5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1716_2502.log
== TEST (2019-05-16 08:56:45) 
-- CODE:
n = int(input(""))
cont = 0
x = 1
y = 0
res1 = 0
res = 120.5
res2 = 0

while(cont != n):
	if(cont==0):
		res2 = res * (1/(x * (3**y))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 12
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:57:27) 
-- CODE:
n = int(input(""))
cont = 0
x = 1
y = 0
res1 = 0
res = 120.5
res2 = 0

while(cont != n):
	if(cont==0):
		res2 = res * (1/(x * (3**y))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 12
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:00:23) 
-- CODE:
n = int(input(""))
cont = 0
x = 1
y = 0
res1 = 0
res = 120.5
res2 = 0

while(cont != n):
	if(cont==0):
		res2 = res * (1/(x * (3**y))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 12
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:00:55) 
-- CODE:
n = int(input(""))
cont = 0
x = 1
y = 0
res1 = 0
res = 120.5
res2 = 0

while(cont != n):
	if(cont==0):
		res2 = res * (1/(x * (3**y))

	if(cont%2 !=0):
		res2= res2 * (-1)
	else:
		res2 = res * 1/(x * 3**y)					  
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 13
    if(cont%2 !=0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:01:36) 
-- CODE:
n = int(input(""))
cont = 0
x = 1
y = 0
res1 = 0
res = 120.5
res2 = 0

while(cont != n):

	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:01:39) 
-- CODE:
n = int(input(""))
cont = 0
x = 1
y = 0
res1 = 0
res = 120.5
res2 = 0

while(cont != n):

	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:02:49) 
-- CODE:
n = int(input(""))
cont = 0
x = 1
y = 0
res1 = 0
res = 120.5
res2 = 0

while(cont != n):
	if(cont==0):
		res2 = res * 1/(x * (3**y)
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 12
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:20:51) 
-- CODE:
n = int(input(""))
cont = 0
x = 1
y = 0
res1 = 0
res = 120.5
res2 = 0
while(cont != n):
	if(cont==0):
		res2 = res * (1/(x * (3**y))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:21:06) 
-- CODE:
n = int(input(""))
cont = 0
x = 1
y = 0
res1 = 0
res = 120.5
res2 = 0
while(cont != n):
	if(cont==0)
		res2 = res * (1/(x * (3**y))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 9
    if(cont==0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:21:16) 
-- CODE:
n = int(input(""))
cont = 0
x = 1
y = 0
res1 = 0
res = 120.5
res2 = 0
while(cont != n):
	if(cont==0):
		res2 = res * (1/(x * (3**y))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:22:01) 
-- CODE:
n = int(input(""))
cont=0
x=1
y=0
res1=0
res=120.5
res2=0
while(cont != n):
	if(cont==0):
		res2 = res * (1/(x * (3**y))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:22:15) 
-- CODE:
n = int(input(""))
cont=0
x=1
y=0
res1=0
res=120.5
res2=0
while(cont!=n):
	if(cont==0):
		res2 = res * (1/(x * (3**y))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:32:53) 
-- CODE:
n = int(input(""))
cont=0
x=1
y=0
res1=0
res=120.5
res2=0
while(cont!=n):
	if(cont==0):
		res2=res * (1/(x * (3**y))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:33:26) 
-- CODE:
n = int(input(""))
cont=0
x=1
y=0
res1=0
res=120.5
res2=0
while(cont!=n):
	if(cont==0):
		res2=res * (1/(x * (3**y)))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- OUTPUT:
109.28143434
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:33:51) 
-- CODE:
n = int(input(""))
cont=0
x=1
y=0
res1=0
res=120.5
res2=0
while(cont!=n):
	if(cont==0):
		res2=res * (1/(x * (3**y)))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- OUTPUT:
109.28143434
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:34:06) 
-- CODE:
n = int(input(""))
cont=0
x=1
y=0
res1=0
res=120.5
res2=0
while(cont!=n):
	if(cont==0):
		res2=res * (1/(x * (3**y)))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- OUTPUT:
109.28143434
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:34:36) 
-- CODE:
n = int(input(""))
cont=0
x=1
y=0
res1=0
res=12**0.5
res2=0
while(cont!=n):
	if(cont==0):
		res2=res * (1/(x * (3**y)))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:34:46) 
-- CODE:
n = int(input(""))
cont=0
x=1
y=0
res1=0
res=12**0.5
res2=0
while(cont!=n):
	if(cont==0):
		res2=res * (1/(x * (3**y)))
	else:
		res2 = res * 1/(x * 3**y)
	if(cont%2 !=0):
		res2= res2 * (-1)
	res1=res2+res1
	x+=2
	y+=1						  
	cont+=1
print(round(res1,8))	
-- EXECUTION TIME:
0.165284
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
